design: fix margin-right for left panel on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -58,6 +58,7 @@
       top: 0;
       flex-grow: 1;
       align-self: flex-start;
+      margin-right: 0;
     }
 
     .right{
